--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cron": "^1.8.2",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "socket.io": "^3.0.4"
