--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Amino Belyamani",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.5",
     "cron": "^1.8.2",
     "csv-parser": "^3.0.0",
     "express": "^4.17.1",
